--- a/src/app/_page/data-pegawai/view-data-pegawai/view-data-pegawai.component.html
+++ b/src/app/_page/data-pegawai/view-data-pegawai/view-data-pegawai.component.html
@@ -40,9 +40,15 @@
                 </div>
               </div>
             </tab>
-            <tab heading="Reimbursment">Static content 1</tab>
-            <tab heading="Punisment">Static content 2</tab>
-            <tab heading="Reward">Static content 3</tab>
+            <tab heading="Reimbursment">
+              <app-view-reimbursement></app-view-reimbursement>
+            </tab>
+            <tab heading="Punisment">
+              <app-view-punisment></app-view-punisment>
+            </tab>
+            <tab heading="Reward">
+              <app-view-reward></app-view-reward>
+            </tab>
           </tabset>
         </div>
       </div>
