--- a/src/app/_page/loker/edit-loker/edit-loker.component.html
+++ b/src/app/_page/loker/edit-loker/edit-loker.component.html
@@ -1,52 +1,6 @@
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="card">
-      <div class="card-content">
-        <div class="card-body">
-          <div class="px-3">
-            <div class="row">
-              <div class="col-xl-6 col-lg-6 col-md-12">
-                <div class="form-group row">
-                  <label class="col-md-3 label-control" for="projectinput1">Divisi: </label>
-                  <div class="col-md-9">
-                    <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 col-md-12">
-                <div class="form-group row">
-                  <label class="col-md-3 label-control" for="projectinput1">Jabatan: </label>
-                  <div class="col-md-9">
-                    <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 col-md-12">
-                <div class="form-group row">
-                  <label class="col-md-3 label-control" for="projectinput1">Job title: </label>
-                  <div class="col-md-9">
-                    <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 col-md-12">
-                <div class="form-group row">
-                  <label class="col-md-3 label-control" for="projectinput1">Personil: </label>
-                  <div class="col-md-9">
-                    <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{lokasi}}</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row text-left">
-  <div class="col-sm-12">
-    <div class="card">
       <div class="card-header">
         <div class="row">
           <div class="col-10 text-left">
@@ -58,47 +12,91 @@
         <div class="card-body">
           <form class="form" #f="ngForm">
             <div class="row">
-              <!-- <div class="col-12 mb-2">
-                <label for="floatEmail">Request Karyawan</label>
-                <ng-select [items]="RekapPeriode" [(ngModel)]="dataLoker.idReqKaryawan" name="idReqKaryawan"
-                  id="idReqKaryawan" #idReqKaryawan="ngModel">
-                </ng-select>
-                <small class="form-text text-muted danger"
-                  *ngIf="!idReqKaryawan.valid && (idReqKaryawan.dirty || idReqKaryawan.touched) ">Silahkan Pilih Request
-                  Karyawan</small>
-              </div> -->
               <div class="col-xl-6 col-lg-6 col-md-12">
                 <div class="form-group">
                   <label for="minDate">Start Date</label>
-                  <input bsDatepicker class="form-control" [(ngModel)]="dataLoker.startDate" name="startDate"
-                    id="startDate" #startDate="ngModel" required [minDate]="minDate" autocomplete="off" />
+                  <input bsDatepicker class="form-control" [(ngModel)]="dataLoker.start_publish_date" name="start_publish_date"
+                    id="start_publish_date" #start_publish_date="ngModel" required [minDate]="minDate" autocomplete="off" />
                   <small class="form-text text-muted danger"
-                    *ngIf="!startDate.valid && (startDate.dirty || startDate.touched) && startDate.errors?.minDate">minDate
-                    error</small>
+                    *ngIf="!start_publish_date.valid && (start_publish_date.dirty || start_publish_date.touched) && start_publish_date.errors?.minDate">Start Date Error</small>
                 </div>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12">
                 <div class="form-group">
                   <label for="minDate">End Date</label>
-                  <input bsDatepicker class="form-control" [(ngModel)]="dataLoker.endDate" name="endDate" id="endDate"
-                    #endDate="ngModel" required autocomplete="off" />
+                  <input bsDatepicker class="form-control" [(ngModel)]="dataLoker.due_date" name="due_date" id="due_date"
+                    #due_date="ngModel" required autocomplete="off" />
                   <small class="form-text text-muted danger"
-                    *ngIf="!endDate.valid && (endDate.dirty || endDate.touched) && endDate.errors?.minDate">minDate
-                    error</small>
+                    *ngIf="!due_date.valid && (due_date.dirty || due_date.touched) && due_date.errors?.minDate">Due Date Error</small>
                 </div>
               </div>
-              <!-- <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
-                <fieldset class="form-group">
-                  <label for="periode">Jumlah</label>
-                  <input class="form-control input-md " autocomplete="off" #personil="ngModel" required id="personil"
-                    name="personil" [(ngModel)]="dataLoker.personil" type="number" min="1">
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Lokasi</label>
+                <ng-select [items]="Lokasi" bindLabel="lokasiName" [(ngModel)]="selectedLokasi.idLokasi" name="idLokasi"
+                  id="idLokasi" #idLokasi="ngModel">
+                </ng-select>
+                <small class="form-text text-muted danger"
+                  *ngIf="!idLokasi.valid && (idLokasi.dirty || idLokasi.touched) ">Silahkan Pilih Lokasi</small>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+                <label for="floatEmail">Divisi</label>
+                <ng-select [items]="Divisi" bindLabel="nm_divisi" [(ngModel)]="selectedDivisi.idDivisi" name="idDivisi"
+                  id="idDivisi" #idDivisi="ngModel">
+                </ng-select>
+                <small class="form-text text-muted danger"
+                  *ngIf="!idDivisi.valid && (idDivisi.dirty || idDivisi.touched) ">Silahkan Pilih DIvisi</small>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+                <label for="floatEmail">Jabatan</label>
+                <ng-select [items]="Jabatan" bindLabel="nm_jabatan" [(ngModel)]="selectedJabatan.idJabatan"
+                  name="idJabatan" id="idJabatan" #idJabatan="ngModel">
+                </ng-select>
+                <small class="form-text text-muted danger"
+                  *ngIf="!idJabatan.valid && (idJabatan.dirty || idJabatan.touched) ">Silahkan Pilih Jabatan</small>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-12 mb-2">
+                <label for="floatEmail">Job Title</label>
+                <ng-select [items]="Bagian" bindLabel="jobtitle" [(ngModel)]="selectedBagian.idBagian" name="idBagian"
+                  id="idBagian" #idBagian="ngModel">
+                </ng-select>
+                <small class="form-text text-muted danger"
+                  *ngIf="!idBagian.valid && (idBagian.dirty || idBagian.touched) ">Silahkan Pilih Job Title</small>
+              </div>
+              <div class='col-12 col-md-12'>
+                <div class="form-group">
+                  <label class="form-control-label" for="firstname">Degree</label>
+                  <input class="form-control input-md" ngModel #requirement_degree="ngModel" required id="requirement_degree"
+                    name="requirement_degree" [(ngModel)]="dataLoker.requirement_degree" type="text">
                   <small class="form-text text-muted danger"
-                    *ngIf="!personil.valid && (personil.dirty || personil.touched)">Wajib diisi!!</small>
+                    *ngIf="!requirement_degree.valid && (requirement_degree.dirty || requirement_degree.touched)">Wajib
+                    diisi!</small>
+                </div>
+              </div>
+              <div class="col-xl-12 col-lg-12 col-md-12">
+                <fieldset class="form-group">
+                  <label for="placeTextarea">Skill</label>
+                  <textarea class="form-control" id="requirement_skill" name="requirement_skill"
+                    #requirement_skill="ngModel" required rows="3" [(ngModel)]="dataLoker.requirement_skill"
+                    placeholder="Skill" autocomplete="off"></textarea>
+                  <small class="form-text text-muted danger"
+                    *ngIf="!requirement_skill.valid && (requirement_skill.dirty || requirement_skill.touched)">Wajib
+                    diisi!</small>
                 </fieldset>
-              </div> -->
+              </div>
+              <div class="col-xl-12 col-lg-12 col-md-12">
+                <fieldset class="form-group">
+                  <label for="placeTextarea">Pengalaman Kerja</label>
+                  <textarea class="form-control" id="working_experience" name="working_experience"
+                    #working_experience="ngModel" required rows="3" [(ngModel)]="dataLoker.working_experience"
+                    placeholder="Pengalaman Kerja" autocomplete="off"></textarea>
+                  <small class="form-text text-muted danger"
+                    *ngIf="!working_experience.valid && (working_experience.dirty || working_experience.touched)">Wajib
+                    diisi!</small>
+                </fieldset>
+              </div>
 
               <div class="form-group col-md-12 text-right">
-                <button type="button" class="btn btn-success mr-2 btn-raised">Cancel</button>
+                <button type="button" class="btn btn-success mr-2 btn-raised"(click)="cancel()" >Cancel</button>
                 <button type="button" class="btn btn-danger btn-raised" [disabled]="!f.valid">Submit</button>
               </div>
             </div>
