--- a/src/app/_page/rkp/edit-rkp/edit-rkp.component.html
+++ b/src/app/_page/rkp/edit-rkp/edit-rkp.component.html
@@ -70,7 +70,7 @@
               </div>
 
               <div class="form-group col-md-12 text-right">
-                <button type="button" class="btn btn-success mr-2 btn-raised">Cancel</button>
+                <button type="button" class="btn btn-success mr-2 btn-raised" (click)="cancel()">Cancel</button>
                 <button type="button" class="btn btn-danger btn-raised" [disabled]="!f.valid">Submit</button>
               </div>
             </div>
