--- a/src/app/_page/data-pegawai/datatable-data-pegawai/datatable-data-pegawai.component.html
+++ b/src/app/_page/data-pegawai/datatable-data-pegawai/datatable-data-pegawai.component.html
@@ -26,28 +26,24 @@
             <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
               <div class="row">
                 <div class="col-12 mb-2">
-                  <label for="floatEmail">Periode</label>
+                  <label for="floatEmail">Bagian</label>
                   <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.periode}}</div>
                 </div>
                 <div class="col-12 mb-2">
-                  <label for="floatEmail">Gender</label>
+                  <label for="floatEmail">Tempat Lahir</label>
                   <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.gender}}</div>
                 </div>
                 <div class="col-12 mb-2">
-                  <label for="floatEmail">Usia Minimum</label>
+                  <label for="floatEmail">Tanggal Lahir</label>
                   <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.minAge}}</div>
                 </div>
                 <div class="col-12 mb-2">
-                  <label for="floatEmail">Usia Maximum</label>
+                  <label for="floatEmail">Alamat</label>
                   <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.maxAge}}</div>
                 </div>
                 <div class="col-12 mb-2">
                   <label for="floatEmail">Pendidikan</label>
                   <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementDegree}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Keahlian</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementSkill}}</div>
                 </div>
               </div>
             </ng-template>
@@ -90,12 +86,15 @@
               <a class="success p-0" data-original-title="" title="" (click)="update(value)">
                 <i class="ft-edit-2 font-medium-3 mr-2"></i>
               </a>
-              <!-- <a class="danger p-0" data-original-title="" title="" (click)="openModalApproval(value, $event, content)">
+              <a class="danger p-0" data-original-title="" title="" (click)="openModalApproval(value, $event, content)">
                 <i class="ft-check-circle font-medium-3 mr-2"></i>
               </a>
-              <a class="warning p-0" data-original-title="" title="" (click)="kandidat(value)">
-                <i class="ft-user font-medium-3 mr-2"></i>
-              </a> -->
+              <a class="warning p-0" data-original-title="" title="" (click)="punisment(value)">
+                <i class="ft-box font-medium-3 mr-2"></i>
+              </a>
+              <a class="warning p-0" data-original-title="" title="" (click)="reward(value)">
+                <i class="ft-codepen font-medium-3 mr-2"></i>
+              </a>
               <a class="p-0" data-original-title="" title="">
                 <i class="ft-printer  font-medium-3 mr-2"></i>
               </a>
