--- a/src/app/_page/kandidat/datatable-kandidat/datatable-kandidat.component.html
+++ b/src/app/_page/kandidat/datatable-kandidat/datatable-kandidat.component.html
@@ -1,130 +1,139 @@
 <!--Paging dataTable starts-->
 <section id="paging" class="mb-3 mt-3">
-    <!-- <div class="row">
+  <!-- <div class="row">
       <div class="col-12 text-left">
         <button class="btn btn-primary">
           <a class="text-decoration-none text-white" [routerLink]="['/kandidat/add']">New Data Kandidat</a>
         </button>
       </div>
     </div> -->
-    <div class="d-flex justify-content-between bd-highlight">
-      <div class="p-2 bd-highlight">
-        <select class="form-control" (change)="limit(show.value)" #show id="show" name="show">
-          <option value="5" selected>10</option>
-          <option value="15">15</option>
-          <option value="20">20</option>
-        </select>
-      </div>
-      <div class="p-2 bd-highlight"><input type='text' class="p-2 form-control" placeholder='Search...'
-          (keyup)='updateFilter($event)' /></div>
+  <div class="d-flex justify-content-between bd-highlight">
+    <div class="p-2 bd-highlight">
+      <select class="form-control" (change)="limit(show.value)" #show id="show" name="show">
+        <option value="5" selected>10</option>
+        <option value="15">15</option>
+        <option value="20">20</option>
+      </select>
     </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <ngx-datatable class="bootstrap" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
-          [rowHeight]="'auto'" [limit]="10" [scrollbarV]="false" [scrollbarH]="false">
-          <ngx-datatable-row-detail [rowHeight]="500" #myDetailRow (toggle)="onDetailToggle($event)">
-            <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
-              <div class="row">
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Periode</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.periode}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Gender</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.gender}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Usia Minimum</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.minAge}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Usia Maximum</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.maxAge}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Pendidikan</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementDegree}}</div>
-                </div>
-                <div class="col-12 mb-2">
-                  <label for="floatEmail">Keahlian</label>
-                  <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementSkill}}</div>
-                </div>
+    <div class="p-2 bd-highlight"><input type='text' class="p-2 form-control" placeholder='Search...'
+        (keyup)='updateFilter($event)' /></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <ngx-datatable class="bootstrap" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
+        [rowHeight]="'auto'" [limit]="10" [scrollbarV]="false" [scrollbarH]="false">
+        <ngx-datatable-row-detail [rowHeight]="500" #myDetailRow (toggle)="onDetailToggle($event)">
+          <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
+            <div class="row">
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Periode</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.periode}}</div>
               </div>
-            </ng-template>
-          </ngx-datatable-row-detail>
-          <ngx-datatable-column [width]="50" [resizeable]="false" [sortable]="false" [draggable]="false"
-            [canAutoResize]="false">
-            <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
-              <a href="javascript:void(0)" [class.datatable-icon-right]="!expanded" [class.datatable-icon-down]="expanded"
-                title="Expand/Collapse Row" (click)="toggleExpandRow(row)">
-              </a>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Name" sortable="false" prop="nama">
-            <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <span>{{value}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Gender" sortable="false" prop="genderPelamar">
-            <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <span>{{value}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Pendidikan Terakhir" sortable="false" prop="pendidikanTerakhir">
-            <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <span>{{value}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Job Title" sortable="false" prop="bagian">
-            <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <span>{{value}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Status" sortable="false" prop="status">
-            <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <span class="badge badge-primary badge-pill">{{value}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Actions" sortable="false" prop="id">
-            <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-              <a class="success p-0" data-original-title="" title="" (click)="update(value)">
-                <i class="ft-edit-2 font-medium-3 mr-2"></i>
-              </a>
-              <a class="danger p-0" data-original-title="" title="" (click)="openModalApproval(value, $event, content)">
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Gender</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.gender}}</div>
+              </div>
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Usia Minimum</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.minAge}}</div>
+              </div>
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Usia Maximum</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.maxAge}}</div>
+              </div>
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Pendidikan</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementDegree}}</div>
+              </div>
+              <div class="col-12 mb-2">
+                <label for="floatEmail">Keahlian</label>
+                <div class="border pl-2 pt-1 pb-1 pr-1 rounded">{{row.requirementSkill}}</div>
+              </div>
+            </div>
+          </ng-template>
+        </ngx-datatable-row-detail>
+        <ngx-datatable-column [width]="50" [resizeable]="false" [sortable]="false" [draggable]="false"
+          [canAutoResize]="false">
+          <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
+            <a href="javascript:void(0)" [class.datatable-icon-right]="!expanded" [class.datatable-icon-down]="expanded"
+              title="Expand/Collapse Row" (click)="toggleExpandRow(row)">
+            </a>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Name" sortable="false" prop="nama">
+          <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <span>{{value}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Gender" sortable="false" prop="genderPelamar">
+          <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <span>{{value}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Pendidikan Terakhir" sortable="false" prop="pendidikanTerakhir">
+          <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <span>{{value}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Job Title" sortable="false" prop="bagian">
+          <ng-template let-row="rows" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <span>{{value}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Status" sortable="false" prop="status">
+          <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <span class="badge badge-primary badge-pill">{{value}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Actions" sortable="false" prop="id">
+          <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
+            <a class="success p-0" data-original-title="" title="" (click)="update(value)"
+              ngbTooltip="Update Data Kandidat">
+              <i class="ft-edit-2 font-medium-3 mr-2"></i>
+            </a>
+            <!-- <a class="danger p-0" data-original-title="" title="" (click)="openModalApproval(value, $event, content)">
                 <i class="ft-check-circle font-medium-3 mr-2"></i>
-              </a>
-              <a class="warning p-0" data-original-title="" title="" (click)="interview(value)">
-                <i class="ft-phone font-medium-3 mr-2"></i>
-              </a>
-              <a class="p-0" data-original-title="" title="">
-                <i class="ft-printer  font-medium-3 mr-2"></i>
-              </a>
-            </ng-template>
-          </ngx-datatable-column>
-        </ngx-datatable>
+              </a> -->
+            <span class="image-upload danger p-0" ngbTooltip="Upload Dokumen Kandidat">
+              <label for="file-input">
+                <i class="ft-file font-medium-3 mr-2"></i>
+              </label>
+
+              <input id="file-input" type="file" />
+            </span>
+            <a class="warning p-0" data-original-title="" title="" (click)="interview(value)"
+              ngbTooltip="Buat Jadwal Interview">
+              <i class="ft-phone font-medium-3 mr-2"></i>
+            </a>
+            <a class="p-0" data-original-title="" title="">
+              <i class="ft-printer  font-medium-3 mr-2"></i>
+            </a>
+          </ng-template>
+        </ngx-datatable-column>
+      </ngx-datatable>
+    </div>
+  </div>
+</section>
+<!--Paging dataTable starts-->
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Ubah Status</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-12">
+        <textarea class="form-control" id="description" name="description" #description="ngModel" required
+          [(ngModel)]="dataApproval.description" rows="3" placeholder="Description" autocomplete="off"></textarea>
       </div>
     </div>
-  </section>
-  <!--Paging dataTable starts-->
-  
-  <ng-template #content let-c="close" let-d="dismiss">
-    <div class="modal-header">
-      <h4 class="modal-title">Ubah Status</h4>
-      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <div class="row">
-        <div class="col-12">
-          <textarea class="form-control" id="description" name="description" #description="ngModel" required
-            [(ngModel)]="dataApproval.description" rows="3" placeholder="Description" autocomplete="off"></textarea>
-        </div>
-      </div>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary btn-raised" (click)="c('Close click')">Close</button>
-      <button type="button" class="btn btn-danger btn-raised" (click)="approval()" (click)="c('Close click')">Process</button>
-    </div>
-  </ng-template>
-  
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary btn-raised" (click)="c('Close click')">Close</button>
+    <button type="button" class="btn btn-danger btn-raised" (click)="approval()"
+      (click)="c('Close click')">Process</button>
+  </div>
+</ng-template>
