--- a/src/app/_page/req-karyawan/datatable-req-karyawan/datatable-req-karyawan.component.html
+++ b/src/app/_page/req-karyawan/datatable-req-karyawan/datatable-req-karyawan.component.html
@@ -87,16 +87,18 @@
         </ngx-datatable-column>
         <ngx-datatable-column name="Actions" sortable="false" prop="id">
           <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-            <a class="success p-0" data-original-title="" title="" (click)="update(value)">
+            <a class="success p-0" data-original-title="" title="" (click)="update(value)"
+              ngbTooltip="Update Request Pegawai">
               <i class="ft-edit-2 font-medium-3 mr-2"></i>
             </a>
-            <a class="danger p-0" data-original-title="" title="" (click)="openModalApproval(value, $event, content)">
+            <a class="danger p-0" *ngIf="!rows[rowIndex].hiddenEditByStatus" data-original-title="" title=""
+              (click)="openModalApproval(value, $event, content)" ngbTooltip="Ubah Status Request Pegawai">
               <i class="ft-check-circle  font-medium-3 mr-2"></i>
             </a>
-            <a class="warning p-0" data-original-title="" title="" (click)="loker(value)">
+            <!-- <a class="warning p-0" data-original-title="" title="" (click)="loker(value)">
               <i class="ft-wind  font-medium-3 mr-2"></i>
-            </a>
-            <a class="p-0" data-original-title="" title="">
+            </a> -->
+            <a class="p-0" data-original-title="" title="" ngbTooltip="Print Data Request Pegawai">
               <i class="ft-printer  font-medium-3 mr-2"></i>
             </a>
           </ng-template>
