--- a/src/app/_page/rkp/add-rkp/add-rkp.component.html
+++ b/src/app/_page/rkp/add-rkp/add-rkp.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="card-content">
         <div class="card-body">
-          <form class="form" (ngSubmit)="addRkp()" #f="ngForm" >
+          <form class="form" (ngSubmit)="addRkp()" #f="ngForm">
             <div class="row">
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
                 <label for="floatEmail">Tahun</label>
@@ -53,7 +53,7 @@
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mb-2">
                 <label for="floatEmail">Job Title</label>
-                <ng-select [items]="Bagian" bindLabel="jobtitle" [(ngModel)]="selectedBagian.idBagian" name="idBagian"
+                <ng-select (ngModelChange)="selectBagian($event)" [items]="Bagian" bindLabel="jobtitle" [(ngModel)]="selectedBagian.idBagian" name="idBagian"
                   id="idBagian" #idBagian="ngModel">
                 </ng-select>
                 <small class="form-text text-muted danger"
@@ -70,8 +70,8 @@
               </div>
 
               <div class="form-group col-md-12 text-right">
-                <button type="button" class="btn btn-success mr-2 btn-raised">Cancel</button>
-                <button type="button" class="btn btn-danger btn-raised" [disabled]="!f.valid">Submit</button>
+                <button type="button" class="btn btn-success mr-2 btn-raised" (click)="cancel()">Cancel</button>
+                <button type="submit" class="btn btn-danger btn-raised" [disabled]="!f.valid">Submit</button>
               </div>
             </div>
           </form>
