--- a/src/app/_page/rkp/datatable-rkp/datatable-rkp.component.html
+++ b/src/app/_page/rkp/datatable-rkp/datatable-rkp.component.html
@@ -60,11 +60,14 @@
         </ngx-datatable-column>
         <ngx-datatable-column name="Actions" sortable="false" prop="id">
           <ng-template let-row="data" let-value="value" let-rowIndex="rowIndex" ngx-datatable-cell-template>
-            <a class="success p-0" data-original-title="" title="" (click)="update(value)">
+            <a class="success p-0" data-original-title="" title="" (click)="update(value)" ngbTooltip="Edit RKAP">
               <i class="ft-edit-2 font-medium-3 mr-2"></i>
             </a>
-            <a class="danger p-0" data-original-title="" title="" (click)="delete(value)">
+            <a class="danger p-0" data-original-title="" title="" (click)="delete(value)" ngbTooltip="Delete RKAP">
               <i class="ft-x font-medium-3 mr-2"></i>
+            </a>
+            <a class="p-0" data-original-title="" title="" ngbTooltip="Print Data RKAP">
+              <i class="ft-printer  font-medium-3 mr-2"></i>
             </a>
           </ng-template>
         </ngx-datatable-column>
